Fixed overflow issue that caused touchpad gesture issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,8 @@
 html, body {
   min-width: 100vw;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+  touch-action: pan-y;
 }
 
 body {
